minor frontend bugs update

--- a/index.html
+++ b/index.html
@@ -53,15 +53,14 @@
     </div>
   </nav>
 
-  <header class="wrapper viewer-ue" id="mainarea">
+  <div class="wrapper viewer-ue" id="mainarea">
     <!-- <div class="alert alert-warning centered-axis-xy" style="min-height: 20px; display:none;" role="alert"
       id="compilingmessage">
       <div id='loadTasks'> </div>
     </div> -->
     <!-- The "tabindex=0" specifier on the canvas is important to allow it to capture keyboard focus when clicking on it with a mouse -->
     <canvas tabindex=0 id="canvas" class="emscripten" oncontextmenu="event.preventDefault()" style="display:none;">
-  </header>
-  
+  </div>
   <div class="row buttonarea text-center" id="buttonrow" style='display:none'>
     <div class="col-sm-2 text-center"></div>
     <div class="col-sm-2 text-center"><button type="button" class="btn btn-primary"
@@ -86,7 +85,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="heading-title">Reconnect to Your Body</h2>
-          <p class="my-4">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
             semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
             commodo.</p>
         </div>
