--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
   <section class="section work-area">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 p">
           <h2 class="heading-title">Reconnect to Your Body</h2>
-          h3
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
+          <h3 class="heading-subtitle">The connectivity standard for e-textiles by <span class="primary-color">Nanoleq</span></h3>
+          <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
             semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
             commodo.</p>
         </div>
