little UI updates

--- a/index.html
+++ b/index.html
@@ -83,12 +83,10 @@
   <section class="section work-area">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 p">
+        <div class="col-md-6 pt-4">
           <h2 class="heading-title">Reconnect to Your Body</h2>
           <h3 class="heading-subtitle">The connectivity standard for e-textiles by <span class="primary-color">Nanoleq</span></h3>
-          <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
-            semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-            commodo.</p>
+          <p class="pt-2">Our PhantomTapeTM elastic conductors and ElectroSkinTM electrodes enable your clothing to sense your heartbeat, your muscles and brain activity. They can also stimulate your body for more power, better training and pain relief. Our electronics are seamlessly integrated into clothing, making them highly comfortable, smooth and washable. Easy to integrate, the Nanoleq product platform is a game changer for the long-awaited scaleup of the smart textile market.</p>
         </div>
         <div class="col-md-6">
             <img style="width: 100%;" src="assets/img/work-img-1.png" alt="">
