minor frontend update

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <div class="col-md-6 pt-4">
           <h2 class="heading-title">Reconnect to Your Body</h2>
           <h3 class="heading-subtitle">The connectivity standard for e-textiles by <span class="primary-color">Nanoleq</span></h3>
-          <p class="mt-2">Our PhantomTapeTM elastic conductors and ElectroSkinTM electrodes enable your clothing to sense your heartbeat, your muscles and brain activity. They can also stimulate your body for more power, better training and pain relief. Our electronics are seamlessly integrated into clothing, making them highly comfortable, smooth and washable. Easy to integrate, the Nanoleq product platform is a game changer for the long-awaited scaleup of the smart textile market.</p>
-          <a href="#" class="btn btn-primary mt-4">Browse Products</a>
+          <p class="mt-2">Our PhantomTape<sup>TM</sup> elastic conductors and ElectroSkin<sup>TM</sup> electrodes enable your clothing to sense your heartbeat, your muscles and brain activity. They can also stimulate your body for more power, better training and pain relief. Our electronics are seamlessly integrated into clothing, making them highly comfortable, smooth and washable. Easy to integrate, the Nanoleq product platform is a game changer for the long-awaited scaleup of the smart textile market.</p>
+          <a href="#" class="btn btn-secondary mt-4">Browse Products</a>
         </div>
         <div class="col-md-6">
             <img style="width: 100%;" src="assets/img/work-img-1.png" alt="">
