--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     </div>
   </nav>
 
-  <div class="wrapper viewer-ue" id="mainarea">
-    <!-- <div class="alert alert-warning centered-axis-xy" style="min-height: 20px; display:none;" role="alert"
+  <div class="wrapper" id="mainarea">
+    <div class="alert alert-warning centered-axis-xy" style="min-height: 20px; display:none;" role="alert"
       id="compilingmessage">
       <div id='loadTasks'> </div>
-    </div> -->
+    </div>
     <!-- The "tabindex=0" specifier on the canvas is important to allow it to capture keyboard focus when clicking on it with a mouse -->
     <canvas tabindex=0 id="canvas" class="emscripten" oncontextmenu="event.preventDefault()" style="display:none;">
   </div>
@@ -91,6 +91,21 @@
         </div>
         <div class="col-md-6">
             <img style="width: 100%;" src="assets/img/work-img-1.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section class="section details-area py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 pt-4">
+          <h2 class="heading-title text-light">The Future of E-Textiles</h2>
+          <p class="mt-2">E-textiles are clothes which integrate electronics to become interactive and functional. E-shirts can monitor our heart, muscle activity, breathing and body temperature while being active.</p>
+          <a href="#" class="btn btn-secondary mt-4">Read More</a>
+        </div>
+        <div class="col-md-4">
+            <img style="width: 100%;" src="assets/img/video.jpg" alt="">
         </div>
       </div>
     </div>
