minor frontend update

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 pt-4">
-          <h2 class="heading-title text-light">The Future of E-Textiles</h2>
+          <h2 class="heading-title secondary-color font-weight-bold">The Future of E-Textiles</h2>
           <p class="mt-2">E-textiles are clothes which integrate electronics to become interactive and functional. E-shirts can monitor our heart, muscle activity, breathing and body temperature while being active.</p>
           <a href="#" class="btn btn-secondary mt-4">Read More</a>
         </div>
