--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
   <footer class="section footer-area py-4">
     <div class="container">
-      <div class="row">
+      <div class="row justify-content-md-center">
         <div class="footer-dt-company text-center">
           <div class="company-logo mx-auto d-block my-4">
             
