minor frontend update

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             
             <img class="" src="assets/img/logo-main-w.svg" alt="logo">
           </div>
-          <p class="text-light text-center">Nanoleq provides elastic conductors and sensors to precisely monitor biosignals and to provide comfortable electrical stimulation in e-textiles.</p>
+          <p class="col-md-6 text-light text-center mx-auto">Nanoleq provides elastic conductors and sensors to precisely monitor biosignals and to provide comfortable electrical stimulation in e-textiles.</p>
         </div>
         <div class="footer-links">
 
