minor frontend update

--- a/index.html
+++ b/index.html
@@ -118,14 +118,32 @@
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="footer-dt-company text-center">
-          <div class="company-logo mx-auto d-block my-4">
-            
-            <img class="" src="assets/img/logo-main-w.svg" alt="logo">
+          <div class="mx-auto d-block my-4">
+            <img class="company-logo" src="assets/img/logo-main-w.svg" alt="logo">
           </div>
           <p class="col-md-6 text-light text-center mx-auto">Nanoleq provides elastic conductors and sensors to precisely monitor biosignals and to provide comfortable electrical stimulation in e-textiles.</p>
         </div>
-        <div class="footer-links">
-
+        <div class="footer-links text-light my-2">
+          <ul class="nav flex-column flex-sm-row">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Technology</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">FAQs</a>
+            </li>
+          </ul>
         </div>
         <div class="footer-infos">
 
