--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <a href="#" class="btn btn-secondary mt-4">Read More</a>
         </div>
         <div class="col-md-4">
-            <img style="width: 100%;" src="assets/img/video.jpg" alt="">
+            <img style="width: 100%; cursor: pointer;" src="assets/img/video.jpg" alt="">
         </div>
       </div>
     </div>
