minor frontend update

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </div>
   </section>
 
-  <footer class="section footer-area py-4">
+  <footer class="section footer-area py-4 text-light">
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="footer-dt-company text-center">
@@ -123,8 +123,8 @@
           </div>
           <p class="col-md-6 text-light text-center mx-auto">Nanoleq provides elastic conductors and sensors to precisely monitor biosignals and to provide comfortable electrical stimulation in e-textiles.</p>
         </div>
-        <div class="footer-links text-light my-2">
-          <ul class="nav flex-column flex-sm-row">
+        <div class="footer-links mt-2 mb-4">
+          <ul class="nav flex-column flex-sm-row text-light">
             <li class="nav-item">
               <a class="nav-link" href="#">Home</a>
             </li>
@@ -145,8 +145,15 @@
             </li>
           </ul>
         </div>
-        <div class="footer-infos">
-
+        <div class="footer-infos d-sm-flex py-4">
+          <div class="col-8 d-sm-flex">
+            <div class="info-element location">Nanoleq AG, Räffelstrasse 26, 8045 Zurich, Switzerland</div>
+            <div class="info-element email">info@nanoleq.com</div>
+            <div class="info-element phone">+41 78 975 10 72</div>
+          </div>
+          <div class="col-4">
+            <div class="site-copyright">&copy; 2021 <a href="#">Nanoleq.com</a> - All rights reserved.</div>
+          </div>
         </div>
       </div>
     </div>
